Adicionado campo evaluation em Appointment